load("@rules_gazebo//gazebo:headers.bzl", "gz_configure_header")

package(
    default_applicable_licenses = ["//:license"],
    features = [
        "layering_check",
        "parse_headers",
    ],
)

gz_configure_header(
    name = "Config",
    src = "test_config.hh.in",
    out = "include/test_config.hh",
    defines = [
        "CMAKE_BINARY_DIR=.",
        "PROJECT_SOURCE_DIR=.",
    ],
    package_xml = "//:package.xml",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:gz-sim",
    ],
)

cc_library(
    name = "MockSystem",
    testonly = 1,
    hdrs = ["plugins/MockSystem.hh"],
    visibility = ["//visibility:public"],
    deps = [
        "//:gz-sim",
    ],
)

cc_library(
    name = "Helpers",
    testonly = 1,
    hdrs = glob(["helpers/*.hh"]),
    includes = [
        ".",
        "helpers",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":Config",
        ":MockSystem",
        "//:gz-sim",
        "@googletest//:gtest",
        "@gz-common",
        "@gz-math",
        "@gz-transport",
    ],
)

filegroup(
    name = "worlds",
    srcs = glob(["worlds/**"]),
    visibility = ["//:__subpackages__"],
)
